update works, changes values in database, and fixed button text not showing

--- a/pages/css/landing_staff.css
+++ b/pages/css/landing_staff.css
@@ -42,6 +42,6 @@ h1{
     float:left;
 }
  button{
-    height: 20px;
-    width: 115px;
+    height: 25px;
+    width: 117px;
 } 
